# pulso

./: .clang-format  .editorconfig  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
cmake/: Dependencies.cmake
docs/: api.md  arquitectura.md  casos-de-uso.md  colectores.md  compilacion-linux.md  despliegue.md  diseno-clases.md  estandares-codigo.md  flujo-datos.md  flujo-de-trabajo.md  glosario.md  instalacion.md  monitor-config.md  preguntas-frecuentes.md  referencias.md  requerimientos.md  seguridad.md
include/pulso/: config.hpp
src/: CMakeLists.txt  README.md  main.cpp
src/cli/: arg_parser.cpp  arg_parser.h
src/collectors/: icollector.hpp
src/collectors/cpu/: cpu_usage.cpp  cpu_usage.h
src/collectors/disk/: disk_usage.cpp  disk_usage.h
src/collectors/memory/: ram_usage.cpp  ram_usage.h
src/collectors/network/: net_usage.cpp  net_usage.h  network_io.cpp
src/collectors/ram/: ram_usage.cpp  ram_usage.h
src/config/: config.cpp  config.hpp
src/core/: MetricSnapshot.hpp  SystemMonitor.cpp  SystemMonitor.hpp  types.hpp
src/formatters/: formatter_prometheus.cpp  formatter_prometheus.hpp  iformatter.hpp
src/monitor/: system_monitor.cpp  system_monitor.h
src/storage/: schema.cpp  schema.hpp  storage.cpp  storage.hpp
src/test/java/edu/sisinf/estante/util/: ValidadorSQLTest.java
src/utils/: console_formatter.cpp  disk_usage.cpp  signal_handler.cpp  system_metrics.py
tests/: CMakeLists.txt  test_config.cpp  test_console_formatter.cpp  test_system_metrics.py
tests/automatizados/unit/: test_monitor_config.cpp
tests/casos/funcionales/: casos-prueba-funcionales.md
tests/core/: test_types.cpp
tests/fixtures/: proc_stat_sample
